--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 
     compile 'commons-io:commons-io:2.4'
 
+    compile 'org.tmatesoft.svnkit:svnkit:1.3.3'
+
     //compile 'com.jellyfish85:dbaccessor:1.0-SNAPSHOT'
     compile files('lib/dbaccessor.jar')
 
