--- a/build.gradle
+++ b/build.gradle
@@ -7,15 +7,15 @@ repositories {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-all:2.1.5'
+    compile    'org.codehaus.groovy:groovy-all:2.1.5'
 
-    compile 'org.scala-lang:scala-compiler:2.9.2'
+    compile    'org.scala-lang:scala-compiler:2.9.2'
 
-    compile 'org.scala-lang:scala-library:2.9.2'
+    compile    'org.scala-lang:scala-library:2.9.2'
 
-    compile 'commons-io:commons-io:2.4'
+    compile    'commons-io:commons-io:2.4'
 
-    compile 'org.tmatesoft.svnkit:svnkit:1.3.3'
+    compile    'org.tmatesoft.svnkit:svnkit:1.3.3'
 
     //compile 'com.jellyfish85:dbaccessor:1.0-SNAPSHOT'
     compile files('lib/dbaccessor.jar')
@@ -35,6 +35,7 @@ run {
         args project.runargs.split(',')
     }
 }
+//apply plugin: 'jruby'
 
 task ConfigActionRunner (type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
