--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 
     compile    'org.tmatesoft.svnkit:svnkit:1.3.3'
 
+    compile    'org.antlr:antlr-runtime:3.4'
+
     //compile    'org.jruby:gradle-jruby-plugin:0.1'
 
     //compile 'org.clojure:clojure:1.2.0'
@@ -27,6 +29,8 @@ dependencies {
 
     //compile 'com.jellyfish85:svnaccessor:1.0-SNAPSHOT'
     compile files('lib/svnaccessor.jar')
+
+    compile files('lib/plsql-1.0.0.jar')
 
     //runtime files('lib/classes12.jar')
 
