--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     //runtime files('lib/classes12.jar')
 
     runtime files('lib/ojdbc14.jar')
+
+    compile      'junit:junit:4.11'
 }
 
 
