--- a/build.gradle
+++ b/build.gradle
@@ -102,3 +102,9 @@ task CleanSqlTextExpRunner (type: JavaExec) {
     main = "com.jellyfish85.srcParser.runner.CleanSqlTextExpRunner"
     args = project.runargs.split(',').toList()
 }
+
+task BlSubjectIdRunner (type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "com.jellyfish85.srcParser.runner.BlSubjectIdRunner"
+    args = project.runargs.split(',').toList()
+}
