--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 
     compile    'commons-io:commons-io:2.4'
 
+    compile    'commons-lang:commons-lang:2.6'
+
     compile    'org.tmatesoft.svnkit:svnkit:1.3.3'
 
     compile    'org.antlr:antlr-runtime:3.4'
