--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 
     compile    'commons-lang:commons-lang:2.6'
 
+    compile    'commons-configuration:commons-configuration:1.10'
+
     compile    'org.tmatesoft.svnkit:svnkit:1.3.3'
 
     compile    'org.antlr:antlr-runtime:3.4'
